# ChemBot

./: .gitignore  ChemBot_Postman_Collection.json  Dockerfile  IMPLEMENTATION.md  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json  vite.config.ts
src/backend/: config.py  database.py  init_db.py  main.py  prompts.yaml
src/backend/auth/: __init__.py  jwt_handler.py
src/backend/cache/: __init__.py  redis_cache.py
src/backend/chatbot/: __init__.py  chatbot_engine.py  conversation_manager.py  query_classifier.py
src/backend/models/: __init__.py  analytics.py  content.py  question.py  user.py
src/backend/rag/: __init__.py  chunking.py  document_processor.py  pipeline.py  query_engine.py  vector_store.py
src/backend/routes/: analytics.py  auth.py  content.py
src/backend/services/: __init__.py  analytics_service.py
src/backend/utils/: __init__.py  db_utils.py  rate_limiter.py
src/frontend/: App.tsx  index.css
src/frontend/api/: analytics.ts  auth.ts  chat.ts  client.ts  content.ts
src/frontend/components/auth/: LoginForm.tsx  ProtectedRoute.tsx
src/frontend/components/chat/: ChatBox.tsx  InputBox.tsx  Message.tsx
src/frontend/context/: AuthContext.tsx  ChatContext.tsx  ContentContext.tsx
src/frontend/pages/: AnalyticsPage.tsx  ChatbotPage.tsx  ContentListPage.tsx  LoginPage.tsx
src/frontend/utils/: constants.ts  types.ts  validators.ts
tests/: conftest.py  test_analytics_service.py  test_auth.py  test_rate_limiter.py
(+6 files in other folders)
